--- a/Public/css/mystyle.css
+++ b/Public/css/mystyle.css
@@ -32,6 +32,27 @@ text color: rgb(105, 35, 25)
     color: whitesmoke;
     font-size: large;
 }
+.game-container {
+    background-color: rgba(17, 17, 17, .6);
+    width: fit-content;
+}
+.game--container {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    width: 306px;
+    margin: 50px auto;
+    margin-top: 50px !important;
+}
+.cell {
+    font-family: "Permanent Marker", cursive;
+    width: 100px;
+    height: 100px;
+    box-shadow: 0 0 0 1px whitesmoke;
+    border: 1px solid #333333;
+    cursor: pointer;
+    line-height: 100px;
+    font-size: 60px;
+}
 
 .signup {
     color: white;
