--- a/Public/css/game.css
+++ b/Public/css/game.css
@@ -123,7 +123,7 @@ body {
 }
 
 #gameboard {
-  display: flex;
+  display: grid;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
