--- a/Public/css/standard.css
+++ b/Public/css/standard.css
@@ -138,3 +138,118 @@ text color: rgb(105, 35, 25)
         font-size: 20px;
     }
 }
+
+.container {
+    margin: auto;
+    margin-top: 0.5rem;
+    width: 525px;
+  }
+
+.container .square {
+    border: #fff 2.5px solid;
+    width: 170px;
+    height: 170px;
+}
+  
+.container #square-0 {
+    border-left: none;
+    border-top: none;
+    margin-left: 2.5px;
+    margin-top: 2.5px;
+}
+
+.container #square-1 {
+    border-top: none;
+    margin-top: 2.5px;
+}
+
+.container #square-2 {
+    border-right: none;
+    margin-right: 2.5px;
+    border-top: none;
+    margin-top: 2.5px;
+}
+
+.container #square-3 {
+    border-left: none;
+    margin-left: 2.5px;
+}
+
+.container #square-5 {
+    border-right: none;
+    margin-right: 2.5px;
+}
+
+.container #square-6 {
+    border-left: none;
+    margin-left: 2.5px;
+    border-bottom: none;
+    margin-bottom: 2.5px;
+}
+
+.container #square-7 {
+    border-bottom: none;
+    margin-bottom: 2.5px;
+}
+
+.container #square-8 {
+    border-right: none;
+    margin-right: 2.5px;
+    border-bottom: none;
+    margin-bottom: 2.5px;
+}
+
+.square:hover {
+cursor: pointer;
+}
+
+.player-container {
+    color: white;
+    display: flex;
+    justify-content: center;
+    margin: 1rem 0;
+}
+
+#player-one,
+#tie,
+#player-two {
+  color: white;
+  text-align: center;
+  font-weight: 350;
+  font-size: 30px;
+  margin: 0 1rem;
+}
+
+.player-icon-container {
+  color: white;
+  background: transparent;
+  outline: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#num-of-players {
+  color: white;
+  display: grid;
+}
+
+#one-player {
+  color: white;
+  grid-column: 1;
+  grid-row: 1;
+  padding-left: 5px;
+}
+
+#two-player {
+  color: white;
+  grid-column: 1;
+  grid-row: 1;
+}
+
+#player-label {
+  color: white;
+  text-align: center;
+  font-size: 1.5rem;
+  margin: -1px;
+}
