trying to make a heroku app

--- a/Public/css/standard.css
+++ b/Public/css/standard.css
@@ -6,6 +6,7 @@
 body {
     margin-top: auto;
     background-position: center;
+    ;
     background-image: url(https://wallpapertag.com/wallpaper/full/b/7/4/156631-new-black-textured-background-1920x1080-images.jpg);
 }
 
